--- a/notice/templates/notice/create.html
+++ b/notice/templates/notice/create.html
@@ -45,5 +45,5 @@
 {% endblock %}
 
 {% block script %}
-<script src="{% static 'js/notice/textAreaDrag.js' %}"></script>
+<script src="{% static 'js/lengthBreak.js' %}"></script>
 {% endblock %}
