--- a/accounting/templates/accounting/regularly_collect.html
+++ b/accounting/templates/accounting/regularly_collect.html
@@ -210,7 +210,7 @@
             </div>
             <div class="popupBody">
                 <div class="popupSection">
-                    <form method="post" action="{% url 'accounting:r_additional_collect_create' %}">
+                    <form method="post" action="{% url 'accounting:r_additional_collect_create' %}" class="addForm">
                         {% csrf_token %}
                         <div class="popupArticleCategori">추가입력사항</div> 
                         <div class="popupArticleBox">
@@ -219,29 +219,29 @@
                                 <input autocomplete="off" name="category" type="text" class="popupArticleinput">
                             </div>
                             <div class="popupArticleDouble">
-                                <label for="" class="popupArticleLabel">공급가액</label>
-                                <input autocomplete="off" name="value" type="text" class="popupArticleinput">
-                            </div>
-                        </div>
-                        <div class="popupArticleBox">
-                            <div class="popupArticleDouble">
-                                <label for="" class="popupArticleLabel">부가세</label>
-                                <input autocomplete="off" name="VAT" type="text" class="popupArticleinput">
-                            </div>
-                            <div class="popupArticleDouble">
                                 <label for="" class="popupArticleLabel">비고</label>
                                 <input autocomplete="off" name="note" type="text" class="popupArticleinput">
                             </div>
                         </div>
                         <div class="popupArticleBox">
-                            <input type="submit" class="btnModules addBtn" value="추가">
+                            <div class="popupArticleDouble">
+                                <label for="" class="popupArticleLabel">공급가액</label>
+                                <input autocomplete="off" name="value" type="text" class="popupArticleinput amountInput">
+                            </div>
+                            <div class="popupArticleDouble">
+                                <label for="" class="popupArticleLabel">부가세</label>
+                                <input autocomplete="off" name="VAT" type="text" class="popupArticleinput amountInput">
+                            </div>
+                        </div>
+                        <div class="popupArticleBox">
+                            <div class="btnModules addBtn">등록</div>
                         </div>
                         <input type="hidden" name="id" class="addMoreIdHidden">
                         <input type="hidden" name="month" class="addMoreDateHidden">
                     </form>
                     <form method="post" action="{% url 'accounting:r_additional_collect_delete' %}" class="addDeleteForm">
                         {% csrf_token %}
-                        <div class="popupArticleCategori">추가입력 목록</div>                
+                        <div class="popupArticleCategori">추가입력 목록</div>
                         <div class="popupArticleBoxTable">
                             <div class="scrolling_table-list_header addTable">
                                 <table class="table-list">
