--- a/notice/templates/notice/edit.html
+++ b/notice/templates/notice/edit.html
@@ -18,7 +18,7 @@
     <div class="creteHeader">
       <div class="inputCell">
         <span class="inputName">제목</span>
-        <input autocomplete="off" type="text" name="title" value="{{ notice.title }}" required>
+        <input autocomplete="off" type="text" name="title" class="editTitle" value="{{ notice.title }}" required>
       </div>
       <div class="inputCell">
         <span class="inputName">구분</span>
@@ -48,10 +48,14 @@
         </div>
       </div>
     </div>
-    <textarea name="content" required>{{notice.content}}</textarea>
+    <textarea class="editTextArea" name="content" required>{{notice.content}}</textarea>
     <div class="createBtnBox">
       <input autocomplete="off" type="submit" value="저장" class="createBtn">
     </div>
   </form>
 </div>
+{% endblock %}
+
+{% block script %}
+<script src="{% static 'js/lengthBreakEdit.js' %}"></script>
 {% endblock %}
