--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
               </ul>
             </div>
           </div>
-          <div class="nav1Box">
+          <!-- <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/vehicleManagement.png' %}" alt="차량관리 아이콘">
               <div>차량관리</div>
@@ -144,14 +144,14 @@
                 <a href="{% url 'vehicle:list' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">차량목록</li>
                 </a>
-                <a href="{% url 'vehicle:maintenance' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">정비관리</li>
-                </a>
-                <a href="{% url 'vehicle:accident' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">사고관리</li>
-                </a>
               </ul>
             </div>
+          </div> -->
+          <div class="nav1Box">
+            <li class="nav1BoxMenu">
+              <img src="{% static 'images/vehicleManagement.png' %}" alt="차량관리 아이콘">
+              <a href="{% url 'vehicle:list' %}" class="nonDepth2Menu">차량목록</a>
+            </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
