--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -76,7 +76,7 @@
     <div class="commentCreateTitle">댓글쓰기</div>
     <div class="commentCreateBox">
       <div class="commentCreateGuide">댓글</div>
-      <textarea name="content" required></textarea>
+      <textarea name="content" class="length100" required></textarea>
     </div>
     <div class="commentCreateBtnCell">
       <input autocomplete="off" type="submit" value="등록" class="createBtn">
